# boligpriser

./: .gitignore  LICENSE  README.md  downloader.py  pyproject.toml
images/: README.md
notebooks/: datafordeler.py  estimate_surfaces.py  explore_data.py  parquet_geo.py
schemas/: README.md
