[project]
name = "boligpriser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "fiona>=1.10.1",
    "geoarrow-pyarrow>=0.2.0",
    "geopandas>=1.1.3",
    "gql[all]>=4.0.0",
    "httpx>=0.28.1",
    "lonboard>=0.15.0",
    "marimo[recommended]>=0.23.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyogrio>=0.12.1",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ty>=0.0.32",
]
